Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31269

Item.layer: true inside Column triggers bad positioning

    XMLWordPrintable

Details

    • 865b4ec84a7c09565c0946d0498274bc71f9e7d0

    Description

      In examples/quick/scenegraph/simplematerial example if add layer.enabled: true; Column moves down on 1/3 of screen:

              SimpleMaterialItem {
                  layer.enabled: true;
                  width: parent.width;
                  height: parent.height / 3;
                  color: "white"
              }

      But if change Column anchor with FIXED size it becomes OK:

          Column {
      //        anchors.fill: parent
              width: 300;
              height: 300;
              x:0; y: 0;
      

      If set parent-based size, everything bed again:

          Column {
      //        anchors.fill: parent
              width: parent.width;
              height: parent.height;
              x:0; y: 0;
      

      P.S. Not sure that this is bug, but looks strange.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Unassigned Unassigned
              tower120 Diduh Andrey
              Votes:
              3 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes